TFP-6618: Flater ut kontrakten med ytelser og skatteopplysninger og fjerner kilde