@@ -1,38 +1,24 @@
 package no.nav.foreldrepenger.vtp.server.api.scenario;
 
-import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
-import no.nav.foreldrepenger.vtp.kontrakter.person.AdresseDto;
-import no.nav.foreldrepenger.vtp.kontrakter.person.Adressebeskyttelse;
-import no.nav.foreldrepenger.vtp.kontrakter.person.ArbeidsavtaleDto;
-import no.nav.foreldrepenger.vtp.kontrakter.person.ArbeidsforholdDto;
-import no.nav.foreldrepenger.vtp.kontrakter.person.Arbeidsgiver;
-import no.nav.foreldrepenger.vtp.kontrakter.person.ArenaDto;
-import no.nav.foreldrepenger.vtp.kontrakter.person.ArenaMeldekort;
-import no.nav.foreldrepenger.vtp.kontrakter.person.ArenaSakerDto;
-import no.nav.foreldrepenger.vtp.kontrakter.person.ArenaVedtakDto;
-import no.nav.foreldrepenger.vtp.kontrakter.person.FamilierelasjonModellDto;
-import no.nav.foreldrepenger.vtp.kontrakter.person.GeografiskTilknytningDto;
-import no.nav.foreldrepenger.vtp.kontrakter.person.GrunnlagDto;
-import no.nav.foreldrepenger.vtp.kontrakter.person.InfotrygdDto;
-import no.nav.foreldrepenger.vtp.kontrakter.person.InntektYtelseType;
-import no.nav.foreldrepenger.vtp.kontrakter.person.InntektsperiodeDto;
-import no.nav.foreldrepenger.vtp.kontrakter.person.MedlemskapDto;
-import no.nav.foreldrepenger.vtp.kontrakter.person.OrganisasjonDto;
-import no.nav.foreldrepenger.vtp.kontrakter.person.PermisjonDto;
-import no.nav.foreldrepenger.vtp.kontrakter.person.Permisjonstype;
 import no.nav.foreldrepenger.vtp.kontrakter.person.PersonDto;
-import no.nav.foreldrepenger.vtp.kontrakter.person.PersonstatusDto;
-import no.nav.foreldrepenger.vtp.kontrakter.person.SigrunDto;
-import no.nav.foreldrepenger.vtp.kontrakter.person.SivilstandDto;
-import no.nav.foreldrepenger.vtp.kontrakter.person.Språk;
-import no.nav.foreldrepenger.vtp.kontrakter.person.StatsborgerskapDto;
+import no.nav.foreldrepenger.vtp.kontrakter.person.arbeidsforhold.ArbeidsforholdDto;
+import no.nav.foreldrepenger.vtp.kontrakter.person.arbeidsforhold.ArbeidsgiverDto;
+import no.nav.foreldrepenger.vtp.kontrakter.person.arbeidsforhold.OrganisasjonDto;
+import no.nav.foreldrepenger.vtp.kontrakter.person.arbeidsforhold.PrivatArbeidsgiverDto;
+import no.nav.foreldrepenger.vtp.kontrakter.person.inntekt.InntektsperiodeDto;
+import no.nav.foreldrepenger.vtp.kontrakter.person.personopplysninger.AdresseDto;
+import no.nav.foreldrepenger.vtp.kontrakter.person.personopplysninger.AdresserDto;
+import no.nav.foreldrepenger.vtp.kontrakter.person.personopplysninger.FamilierelasjonDto;
+import no.nav.foreldrepenger.vtp.kontrakter.person.personopplysninger.GeografiskTilknytningDto;
+import no.nav.foreldrepenger.vtp.kontrakter.person.personopplysninger.MedlemskapDto;
+import no.nav.foreldrepenger.vtp.kontrakter.person.personopplysninger.PersonopplysningerDto;
+import no.nav.foreldrepenger.vtp.kontrakter.person.personopplysninger.PersonstatusDto;
+import no.nav.foreldrepenger.vtp.kontrakter.person.personopplysninger.SivilstandDto;
+import no.nav.foreldrepenger.vtp.kontrakter.person.personopplysninger.StatsborgerskapDto;
+import no.nav.foreldrepenger.vtp.kontrakter.person.skatt.SkatteopplysningDto;
+import no.nav.foreldrepenger.vtp.kontrakter.person.ytelse.YtelseDto;
 import no.nav.vtp.person.Person;
 import no.nav.vtp.person.arbeidsforhold.Arbeidsavtale;
 import no.nav.vtp.person.arbeidsforhold.Arbeidsforhold;
@@ -56,38 +42,28 @@ import no.nav.vtp.person.personopplysninger.Rolle;
 import no.nav.vtp.person.personopplysninger.Sivilstand;
 import no.nav.vtp.person.personopplysninger.Statsborgerskap;
 import no.nav.vtp.person.skatt.Skatteopplysning;
+import no.nav.vtp.person.ytelse.Beregningsgrunnlag;
 import no.nav.vtp.person.ytelse.Ytelse;
 import no.nav.vtp.person.ytelse.YtelseType;
 
 public class PersonMapper {
 
     private PersonMapper() {
-        /* This utility class should not be instantiated */
     }
 
-    public static Person tilPerson(PersonDto p) {
-        var personopplysninger = tilPersonopplysninger(p);
-        var arbeidsforhold = tilArbeidsforhold(p);
-        var inntekt = tilInntekt(p);
-        var ytelser = tilYtelser(p);
-        var skatteopplysninger = tilSkatteopplysnigner(p);
-        return new Person(personopplysninger, arbeidsforhold, inntekt, ytelser, skatteopplysninger);
+    public static Person tilPerson(PersonDto dto) {
+        return new Person(
+                tilPersonopplysninger(dto.personopplysninger()),
+                tilArbeidsforhold(dto.arbeidsforhold()),
+                tilInntekt(dto.inntekt()),
+                tilYtelser(dto.ytelser()),
+                tilSkatteopplysninger(dto.skatteopplysninger())
+        );
     }
 
-    private static List<Skatteopplysning> tilSkatteopplysnigner(PersonDto person) {
-        if (person.inntektytelse() == null || person.inntektytelse().sigrun() == null || person.inntektytelse().sigrun().inntektår() == null) {
-            return List.of();
-        }
-        return person.inntektytelse().sigrun().inntektår().stream()
-                .map(PersonMapper::tilSkatteopplysning)
-                .toList();
-    }
+    // -- Personopplysninger --
 
-    private static Skatteopplysning tilSkatteopplysning(SigrunDto.InntektsårDto inntektsår) {
-        return new Skatteopplysning(inntektsår.år(), inntektsår.beløp());
-    }
-
-    private static Personopplysninger tilPersonopplysninger(PersonDto p) {
+    private static Personopplysninger tilPersonopplysninger(PersonopplysningerDto p) {
         return new Personopplysninger(
                 new PersonIdent(p.fnr()),
                 tilRolle(p.rolle()),
@@ -102,12 +78,18 @@ public class PersonMapper {
                 tilSivilstand(p.sivilstand()),
                 tilPersonstatus(p.personstatus()),
                 tilMedlemskap(p.medlemskap()),
-                tilAdresser(p.adresser(), p.adressebeskyttelse()),
+                tilAdresser(p.adresser()),
                 p.erSkjermet()
         );
     }
 
-    private static Rolle tilRolle(no.nav.foreldrepenger.vtp.kontrakter.person.Rolle rolle) {
+    private static Navn generertTilfeldigNavn(no.nav.foreldrepenger.vtp.kontrakter.person.personopplysninger.Kjønn kjønn) {
+        var generetNavn = no.nav.foreldrepenger.vtp.kontrakter.person.personopplysninger.Kjønn.M.equals(kjønn) ? FiktivtNavn.getRandomMaleName() : FiktivtNavn.getRandomFemaleName();
+        return new Navn(generetNavn.getFornavn(), null, generetNavn.getEtternavn());
+    }
+
+    private static Rolle tilRolle(no.nav.foreldrepenger.vtp.kontrakter.person.personopplysninger.Rolle rolle) {
+        if (rolle == null) return Rolle.MOR;
         return switch (rolle) {
             case MOR -> Rolle.MOR;
             case FAR -> Rolle.FAR;
@@ -118,21 +100,147 @@ public class PersonMapper {
         };
     }
 
-    private static Navn generertTilfeldigNavn(no.nav.foreldrepenger.vtp.kontrakter.person.Kjønn kjønn) {
-        var generetNavn = no.nav.foreldrepenger.vtp.kontrakter.person.Kjønn.M.equals(kjønn) ? FiktivtNavn.getRandomMaleName() : FiktivtNavn.getRandomFemaleName();
-        return new Navn(generetNavn.getFornavn(), null, generetNavn.getEtternavn());
+    private static no.nav.vtp.person.personopplysninger.Språk tilSpråk(no.nav.foreldrepenger.vtp.kontrakter.person.personopplysninger.Språk språk) {
+        if (språk == null) return null;
+        return switch (språk) {
+            case NB -> no.nav.vtp.person.personopplysninger.Språk.NB;
+            case NN -> no.nav.vtp.person.personopplysninger.Språk.NN;
+            case EN -> no.nav.vtp.person.personopplysninger.Språk.EN;
+        };
     }
 
-    private static List<Arbeidsforhold> tilArbeidsforhold(PersonDto p) {
-        if (p.inntektytelse() == null || p.inntektytelse().aareg() == null) {
-            return Collections.emptyList();
-        }
+    private static Kjønn tilKjønn(no.nav.foreldrepenger.vtp.kontrakter.person.personopplysninger.Kjønn kjønn) {
+        if (kjønn == null) return null;
+        return switch (kjønn) {
+            case M -> Kjønn.M;
+            case K -> Kjønn.K;
+        };
+    }
 
-        return Optional.ofNullable(p.inntektytelse().aareg().arbeidsforhold())
-                .orElse(Collections.emptyList())
-                .stream()
-                .map(PersonMapper::tilArbeidsforhold)
-                .toList();
+    private static GeografiskTilknytning tilGeografiskTilknytning(GeografiskTilknytningDto dto) {
+        if (dto == null) return null;
+        return new GeografiskTilknytning(dto.land(), tilGeoType(dto.type()));
+    }
+
+    private static GeografiskTilknytning.GeografiskTilknytningType tilGeoType(GeografiskTilknytningDto.GeografiskTilknytningType type) {
+        if (type == null) return null;
+        return switch (type) {
+            case BYDEL -> GeografiskTilknytning.GeografiskTilknytningType.BYDEL;
+            case KOMMUNE -> GeografiskTilknytning.GeografiskTilknytningType.KOMMUNE;
+            case LAND -> GeografiskTilknytning.GeografiskTilknytningType.LAND;
+        };
+    }
+
+    private static List<Familierelasjon> tilFamilierelasjoner(List<FamilierelasjonDto> dtos) {
+        if (dtos == null) return List.of();
+        return dtos.stream().map(PersonMapper::tilFamilierelasjon).toList();
+    }
+
+    private static Familierelasjon tilFamilierelasjon(FamilierelasjonDto dto) {
+        return new Familierelasjon(tilRelasjon(dto.relasjon()), new PersonIdent(dto.relatertTilId()));
+    }
+
+    private static Familierelasjon.Relasjon tilRelasjon(FamilierelasjonDto.Relasjon relasjon) {
+        if (relasjon == null) return null;
+        return switch (relasjon) {
+            case EKTE -> Familierelasjon.Relasjon.EKTE;
+            case SAMBOER -> Familierelasjon.Relasjon.SAMBOER;
+            case BARN -> Familierelasjon.Relasjon.BARN;
+            case FAR -> Familierelasjon.Relasjon.FAR;
+            case MOR -> Familierelasjon.Relasjon.MOR;
+            case MEDMOR -> Familierelasjon.Relasjon.MEDMOR;
+        };
+    }
+
+    private static List<Statsborgerskap> tilStatsborgerskap(List<StatsborgerskapDto> dtos) {
+        if (dtos == null) return List.of();
+        return dtos.stream().map(dto -> new Statsborgerskap(dto.land())).toList();
+    }
+
+    private static List<Sivilstand> tilSivilstand(List<SivilstandDto> dtos) {
+        if (dtos == null) return List.of();
+        return dtos.stream().map(PersonMapper::tilSivilstand).toList();
+    }
+
+    private static Sivilstand tilSivilstand(SivilstandDto dto) {
+        return new Sivilstand(tilSivilstandType(dto.sivilstand()), dto.fom(), dto.tom());
+    }
+
+    private static Sivilstand.Type tilSivilstandType(SivilstandDto.Type type) {
+        if (type == null) return null;
+        return Sivilstand.Type.valueOf(type.name());
+    }
+
+    private static List<Personstatus> tilPersonstatus(List<PersonstatusDto> dtos) {
+        if (dtos == null) return List.of();
+        return dtos.stream().map(PersonMapper::tilPersonstatus).toList();
+    }
+
+    private static Personstatus tilPersonstatus(PersonstatusDto dto) {
+        return new Personstatus(tilPersonstatusType(dto.personstatus()), dto.fom(), dto.tom());
+    }
+
+    private static Personstatus.Type tilPersonstatusType(PersonstatusDto.Type type) {
+        if (type == null) return null;
+        return Personstatus.Type.valueOf(type.name());
+    }
+
+    private static List<Medlemskap> tilMedlemskap(List<MedlemskapDto> dtos) {
+        if (dtos == null) return List.of();
+        return dtos.stream().map(PersonMapper::tilMedlemskap).toList();
+    }
+
+    private static Medlemskap tilMedlemskap(MedlemskapDto dto) {
+        return new Medlemskap(dto.fom(), dto.tom(), dto.land(), tilDekningsType(dto.trygdedekning()));
+    }
+
+    private static Medlemskap.DekningsType tilDekningsType(MedlemskapDto.DekningsType type) {
+        if (type == null) return null;
+        return switch (type) {
+            case IHT_AVTALE -> Medlemskap.DekningsType.IHT_AVTALE;
+            case FULL -> Medlemskap.DekningsType.FULL;
+        };
+    }
+
+    private static Adresser tilAdresser(AdresserDto adresser) {
+        if (adresser == null) return new Adresser(List.of(), null);
+        return new Adresser(
+                tilAdresseListe(adresser.adresser()),
+                tilAdressebeskyttelse(adresser.adressebeskyttelse())
+        );
+    }
+
+    private static List<Adresse> tilAdresseListe(List<AdresseDto> adresser) {
+        if (adresser == null) return List.of();
+        return adresser.stream().map(PersonMapper::tilAdresse).toList();
+    }
+
+    private static Adresse tilAdresse(AdresseDto dto) {
+        return new Adresse(tilAdresseType(dto.adresseType()), dto.matrikkelId(), dto.land(), dto.fom(), dto.tom());
+    }
+
+    private static Adresse.AdresseType tilAdresseType(AdresseDto.AdresseType type) {
+        return switch (type) {
+            case BOSTEDSADRESSE -> Adresse.AdresseType.BOSTEDSADRESSE;
+            case POSTADRESSE -> Adresse.AdresseType.POSTADRESSE;
+        };
+    }
+
+    private static no.nav.vtp.person.personopplysninger.Adressebeskyttelse tilAdressebeskyttelse(
+            no.nav.foreldrepenger.vtp.kontrakter.person.personopplysninger.Adressebeskyttelse beskyttelse) {
+        if (beskyttelse == null) return null;
+        return switch (beskyttelse) {
+            case FORTROLIG -> no.nav.vtp.person.personopplysninger.Adressebeskyttelse.FORTROLIG;
+            case STRENGT_FORTROLIG -> no.nav.vtp.person.personopplysninger.Adressebeskyttelse.STRENGT_FORTROLIG;
+            case UGRADERT -> no.nav.vtp.person.personopplysninger.Adressebeskyttelse.UGRADERT;
+        };
+    }
+
+    // -- Arbeidsforhold --
+
+    private static List<Arbeidsforhold> tilArbeidsforhold(List<ArbeidsforholdDto> dtos) {
+        if (dtos == null) return List.of();
+        return dtos.stream().map(PersonMapper::tilArbeidsforhold).toList();
     }
 
     private static Arbeidsforhold tilArbeidsforhold(ArbeidsforholdDto dto) {
@@ -146,443 +254,82 @@ public class PersonMapper {
         );
     }
 
-    private static no.nav.vtp.person.arbeidsforhold.Arbeidsgiver tilArbeidsgiver(Arbeidsgiver arbeidsgiver, String arbeidsforholdId) {
-        if (arbeidsgiver instanceof OrganisasjonDto(no.nav.foreldrepenger.vtp.kontrakter.person.Orgnummer orgnummer, OrganisasjonDto.OrganisasjonsdetaljerDto organisasjonsdetaljer)) {
+    private static no.nav.vtp.person.arbeidsforhold.Arbeidsgiver tilArbeidsgiver(ArbeidsgiverDto arbeidsgiver, String arbeidsforholdId) {
+        if (arbeidsgiver instanceof OrganisasjonDto(String orgnummer, OrganisasjonDto.OrganisasjonsdetaljerDto organisasjonsdetaljer)) {
             var detaljer = new Organisasjon.Detaljer(organisasjonsdetaljer.navn(), organisasjonsdetaljer.registreringsdato());
-            return new Organisasjon(new Orgnummer(orgnummer.value()), arbeidsforholdId, detaljer);
+            return new Organisasjon(new Orgnummer(orgnummer), arbeidsforholdId, detaljer);
         }
-        var ident = new PersonIdent(((no.nav.foreldrepenger.vtp.kontrakter.person.PrivatArbeidsgiver) arbeidsgiver).fnr());
+        var ident = new PersonIdent(((PrivatArbeidsgiverDto) arbeidsgiver).fnr());
         return new PrivatArbeidsgiver(ident);
     }
 
-    private static List<Inntektsperiode> tilInntekt(PersonDto p) {
-        if (p.inntektytelse() == null || p.inntektytelse().inntektskomponent() == null) {
-            return Collections.emptyList();
-        }
+    private static Arbeidsforholdstype tilArbeidsforholdstype(no.nav.foreldrepenger.vtp.kontrakter.person.arbeidsforhold.Arbeidsforholdstype type) {
+        if (type == null) return null;
+        return Arbeidsforholdstype.valueOf(type.name());
+    }
 
-        return Optional.ofNullable(p.inntektytelse().inntektskomponent().inntektsperioder())
-                .orElse(Collections.emptyList())
-                .stream()
-                .map(PersonMapper::tilInntektsperiode)
-                .toList();
+    private static List<Arbeidsavtale> tilArbeidsavtaler(List<no.nav.foreldrepenger.vtp.kontrakter.person.arbeidsforhold.Arbeidsavtale> dtos) {
+        if (dtos == null) return List.of();
+        return dtos.stream().map(PersonMapper::tilArbeidsavtale).toList();
+    }
+
+    private static Arbeidsavtale tilArbeidsavtale(no.nav.foreldrepenger.vtp.kontrakter.person.arbeidsforhold.Arbeidsavtale dto) {
+        return new Arbeidsavtale(dto.avtaltArbeidstimerPerUke(), dto.stillingsprosent(), dto.beregnetAntallTimerPerUke(),
+                dto.sisteLønnsendringsdato(), dto.fomGyldighetsperiode(), dto.tomGyldighetsperiode());
+    }
+
+    private static List<Permisjon> tilPermisjoner(List<no.nav.foreldrepenger.vtp.kontrakter.person.arbeidsforhold.Permisjon> dtos) {
+        if (dtos == null) return List.of();
+        return dtos.stream().map(PersonMapper::tilPermisjon).toList();
+    }
+
+    private static Permisjon tilPermisjon(no.nav.foreldrepenger.vtp.kontrakter.person.arbeidsforhold.Permisjon dto) {
+        return new Permisjon(dto.fom(), dto.tom(), dto.stillingsprosent(),
+                dto.permisjonstype() == null ? null : Permisjon.Permisjonstype.valueOf(dto.permisjonstype().name()));
+    }
+
+    // -- Inntekt --
+
+    private static List<Inntektsperiode> tilInntekt(List<InntektsperiodeDto> dtos) {
+        if (dtos == null) return List.of();
+        return dtos.stream().map(PersonMapper::tilInntektsperiode).toList();
     }
 
     private static Inntektsperiode tilInntektsperiode(InntektsperiodeDto dto) {
         return new Inntektsperiode(
                 tilArbeidsgiver(dto.arbeidsgiver(), null),
-                dto.fom(),
-                dto.tom(),
-                dto.beløp(),
-                tilYtelseType(dto.inntektYtelseType()),
-                tilInntektFordel(dto.inntektFordel())
+                dto.fom(), dto.tom(), dto.beløp(),
+                dto.ytelseType() == null ? null : Inntektsperiode.YtelseType.valueOf(dto.ytelseType().name()),
+                dto.inntektFordel() == null ? null : Inntektsperiode.FordelType.valueOf(dto.inntektFordel().name())
         );
     }
 
-    private static List<Ytelse> tilYtelser(PersonDto p) {
-        if (p.inntektytelse() == null) {
-            return Collections.emptyList();
-        }
+    // -- Ytelser --
 
-        var ytelser = new ArrayList<Ytelse>();
-
-        // Map Arena ytelser
-        if (p.inntektytelse().arena() != null && p.inntektytelse().arena().saker() != null) {
-            ytelser.addAll(tilYtelserFraArena(p.inntektytelse().arena()));
-        }
-
-        // Map Infotrygd ytelser
-        if (p.inntektytelse().infotrygd() != null && p.inntektytelse().infotrygd().ytelser() != null) {
-            ytelser.addAll(tilYtelserFraInfotrygd(p.inntektytelse().infotrygd()));
-        }
-
-        // Map Pesys ytelser
-        if (p.inntektytelse().pesys() != null && Boolean.TRUE.equals(p.inntektytelse().pesys().harUføretrygd())) {
-            ytelser.add(tilYtelserFraPesys());
-        }
-
-        return ytelser;
+    private static List<Ytelse> tilYtelser(List<YtelseDto> dtos) {
+        if (dtos == null) return List.of();
+        return dtos.stream().map(PersonMapper::tilYtelse).toList();
     }
 
-    private static List<Ytelse> tilYtelserFraArena(ArenaDto arena) {
-        return arena.saker().stream()
-                .map(sak -> tilYtelseFraArenaVedtak(sak.tema(), sak.vedtak().getFirst()))
-                .toList();
-    }
-
-    private static Ytelse tilYtelseFraArenaVedtak(ArenaSakerDto.YtelseTema tema,
-                                                  ArenaVedtakDto vedtak) {
-        var ytelseType = tilYtelseTypeFraArenaTema(tema);
-
-        // Calculate total utbetalt from meldekort
-        Integer totalUtbetalt = null;
-        if (vedtak.meldekort() != null && !vedtak.meldekort().isEmpty()) {
-            totalUtbetalt = vedtak.meldekort().stream()
-                    .map(ArenaMeldekort::beløp)
-                    .filter(Objects::nonNull)
-                    .reduce(0, Integer::sum);
-        }
-
+    private static Ytelse tilYtelse(YtelseDto dto) {
         return new Ytelse(
-                ytelseType,
-                vedtak.fom(),
-                vedtak.tom(),
-                vedtak.dagsats(),
-                totalUtbetalt,
-                Collections.emptyList() // Arena doesn't have beregningsgrunnlag in the DTO
+                dto.ytelse() == null ? null : YtelseType.valueOf(dto.ytelse().name()),
+                dto.fra(), dto.til(), dto.dagsats(), dto.utbetalt(),
+                tilBeregningsgrunnlag(dto.beregningsgrunnlag())
         );
     }
 
-    private static YtelseType tilYtelseTypeFraArenaTema(ArenaSakerDto.YtelseTema tema) {
-        return switch (tema) {
-            case AAP -> YtelseType.ARBEIDSAVKLARINGSPENGER;
-            case DAG -> YtelseType.DAGPENGER;
-            default -> throw new IllegalStateException("Ikke støttet ytelse i arena!");
-        };
-    }
-
-    private static List<Ytelse> tilYtelserFraInfotrygd(InfotrygdDto infotrygd) {
-        return infotrygd.ytelser().stream()
-                .map(PersonMapper::tilYtelseFraInfotrygdGrunnlag)
-                .collect(Collectors.toList());
-    }
-
-    private static Ytelse tilYtelseFraInfotrygdGrunnlag(GrunnlagDto grunnlag) {
-        var ytelseType = tilYtelseTypeFraInfotrygdYtelse(grunnlag.ytelse());
-
-        // Calculate total utbetalingsgrad from vedtak
-        Integer totalUtbetalingsgrad = null;
-        if (grunnlag.vedtak() != null && !grunnlag.vedtak().isEmpty()) {
-            var avgUtbetalingsgrad = grunnlag.vedtak().stream()
-                    .map(GrunnlagDto.Vedtak::utbetalingsgrad)
-                    .filter(Objects::nonNull)
-                    .mapToInt(Integer::intValue)
-                    .average();
-            totalUtbetalingsgrad = avgUtbetalingsgrad.isPresent() ? (int) avgUtbetalingsgrad.getAsDouble() : null;
-        }
-
-        return new Ytelse(
-                ytelseType,
-                grunnlag.fom(),
-                grunnlag.tom(),
-                null, // Todo: Har vi en dagsats?
-                totalUtbetalingsgrad,
-                Collections.emptyList() // TODO: TREX til denne?
-        );
-    }
-
-    private static YtelseType tilYtelseTypeFraInfotrygdYtelse(GrunnlagDto.Ytelse ytelse) {
-        return switch (ytelse) {
-            case SP -> YtelseType.SYKEPENGER;
-            default -> throw new IllegalStateException("Ikke støttet ytelse!");
-        };
-    }
-
-    private static Ytelse tilYtelserFraPesys() {
-        return new Ytelse(YtelseType.UFØREPENSJON, LocalDate.now().minusYears(5), null, null, null, null);
-    }
-
-    private static no.nav.vtp.person.personopplysninger.Språk tilSpråk(Språk språk) {
-        if (språk == null) {
-            return null;
-        }
-        return switch (språk) {
-            case NB -> no.nav.vtp.person.personopplysninger.Språk.NB;
-            case NN -> no.nav.vtp.person.personopplysninger.Språk.NN;
-            case EN -> no.nav.vtp.person.personopplysninger.Språk.EN;
-        };
-    }
-
-    private static Kjønn tilKjønn(no.nav.foreldrepenger.vtp.kontrakter.person.Kjønn kjønn) {
-        if (kjønn == null) {
-            return null;
-        }
-        return switch (kjønn) {
-            case M -> Kjønn.M;
-            case K -> Kjønn.K;
-        };
-    }
-
-    private static GeografiskTilknytning tilGeografiskTilknytning(GeografiskTilknytningDto dto) {
-        if (dto == null) {
-            return null;
-        }
-        return new GeografiskTilknytning(
-                dto.land(),
-                tilGeografiskTilknytningType(dto.type())
-        );
-    }
-
-    private static GeografiskTilknytning.GeografiskTilknytningType tilGeografiskTilknytningType(
-            GeografiskTilknytningDto.GeografiskTilknytningType type) {
-        if (type == null) {
-            return null;
-        }
-        return switch (type) {
-            case BYDEL -> GeografiskTilknytning.GeografiskTilknytningType.BYDEL;
-            case KOMMUNE -> GeografiskTilknytning.GeografiskTilknytningType.KOMMUNE;
-            case LAND -> GeografiskTilknytning.GeografiskTilknytningType.LAND;
-        };
-    }
-
-    private static List<Familierelasjon> tilFamilierelasjoner(List<FamilierelasjonModellDto> dtos) {
-        if (dtos == null) {
-            return Collections.emptyList();
-        }
+    private static List<Beregningsgrunnlag> tilBeregningsgrunnlag(List<no.nav.foreldrepenger.vtp.kontrakter.person.ytelse.Beregningsgrunnlag> dtos) {
+        if (dtos == null) return List.of();
         return dtos.stream()
-                .map(PersonMapper::tilFamilierelasjon)
+                .map(dto -> new Beregningsgrunnlag(Beregningsgrunnlag.Kategori.valueOf(dto.kategori().name()), dto.beløp()))
                 .toList();
     }
 
-    private static Familierelasjon tilFamilierelasjon(FamilierelasjonModellDto dto) {
-        return new Familierelasjon(tilRelasjon(dto.relasjon()), new PersonIdent(dto.relatertTilId()));
-    }
+    // -- Skatteopplysninger --
 
-    private static Familierelasjon.Relasjon tilRelasjon(FamilierelasjonModellDto.Relasjon relasjon) {
-        if (relasjon == null) {
-            return null;
-        }
-        return switch (relasjon) {
-            case EKTE -> Familierelasjon.Relasjon.EKTE;
-            case SAMBOER -> Familierelasjon.Relasjon.SAMBOER;
-            case BARN -> Familierelasjon.Relasjon.BARN;
-            case FAR -> Familierelasjon.Relasjon.FAR;
-            case MOR -> Familierelasjon.Relasjon.MOR;
-            case MEDMOR -> Familierelasjon.Relasjon.MEDMOR;
-        };
-    }
-
-    private static List<Statsborgerskap> tilStatsborgerskap(List<StatsborgerskapDto> dtos) {
-        if (dtos == null) {
-            return Collections.emptyList();
-        }
-        return dtos.stream()
-                .map(dto -> new Statsborgerskap(dto.land()))
-                .collect(Collectors.toList());
-    }
-
-    private static List<Sivilstand> tilSivilstand(List<SivilstandDto> dtos) {
-        if (dtos == null) {
-            return Collections.emptyList();
-        }
-        return dtos.stream()
-                .map(PersonMapper::tilSivilstand)
-                .collect(Collectors.toList());
-    }
-
-    private static Sivilstand tilSivilstand(SivilstandDto dto) {
-        return new Sivilstand(
-                tilSivilstander(dto.sivilstand()),
-                dto.fom(),
-                dto.tom()
-        );
-    }
-
-    private static Sivilstand.Type tilSivilstander(SivilstandDto.Sivilstander sivilstand) {
-        if (sivilstand == null) {
-            return null;
-        }
-        return switch (sivilstand) {
-            case ENKE -> Sivilstand.Type.ENKE_ELLER_ENKEMANN;
-            case GIFT -> Sivilstand.Type.GIFT;
-            case GJPA -> Sivilstand.Type.GJENLEVENDE_PARTNER;
-            case GLAD -> Sivilstand.Type.GIFT;  // GLAD (Giftet, lever adskilt) maps to GIFT
-            case REPA -> Sivilstand.Type.REGISTRERT_PARTNER;
-            case SAMB -> Sivilstand.Type.UGIFT;  // SAMB is not directly mapped, use UGIFT
-            case SEPA -> Sivilstand.Type.SEPARERT_PARTNER;
-            case SEPR -> Sivilstand.Type.SEPARERT;
-            case SKIL -> Sivilstand.Type.SKILT;
-            case SKPA -> Sivilstand.Type.SKILT_PARTNER;
-            case UGIF -> Sivilstand.Type.UGIFT;
-        };
-    }
-
-    private static List<Personstatus> tilPersonstatus(List<PersonstatusDto> dtos) {
-        if (dtos == null) {
-            return Collections.emptyList();
-        }
-        return dtos.stream()
-                .map(PersonMapper::tilPersonstatus)
-                .collect(Collectors.toList());
-    }
-
-    private static Personstatus tilPersonstatus(PersonstatusDto dto) {
-        return new Personstatus(
-                tilPersonstatuser(dto.personstatus()),
-                dto.fom(),
-                dto.tom()
-        );
-    }
-
-    private static Personstatus.Type tilPersonstatuser(PersonstatusDto.Personstatuser status) {
-        if (status == null) {
-            return null;
-        }
-        return switch (status) {
-            case ABNR -> Personstatus.Type.ABNR;
-            case ADNR -> Personstatus.Type.ADNR;
-            case BOSA -> Personstatus.Type.BOSA;
-            case DØD -> Personstatus.Type.DØD;
-            case FOSV -> Personstatus.Type.FOSV;
-            case FØDR -> Personstatus.Type.FØDR;
-            case UFUL -> Personstatus.Type.UFUL;
-            case UREG -> Personstatus.Type.UREG;
-            case UTAN -> Personstatus.Type.UTAN;
-            case UTPE -> Personstatus.Type.UTPE;
-            case UTVA -> Personstatus.Type.UTVA;
-        };
-    }
-
-    private static List<Medlemskap> tilMedlemskap(List<MedlemskapDto> dtos) {
-        if (dtos == null) {
-            return Collections.emptyList();
-        }
-        return dtos.stream()
-                .map(PersonMapper::tilMedlemskap)
-                .collect(Collectors.toList());
-    }
-
-    private static Medlemskap tilMedlemskap(MedlemskapDto dto) {
-        return new Medlemskap(
-                dto.fom(),
-                dto.tom(),
-                dto.land(),
-                tilDekningsType(dto.trygdedekning())
-        );
-    }
-
-    private static Medlemskap.DekningsType tilDekningsType(MedlemskapDto.DekningsType type) {
-        if (type == null) {
-            return null;
-        }
-        return switch (type) {
-            case IHT_AVTALE -> Medlemskap.DekningsType.IHT_AVTALE;
-            case FULL -> Medlemskap.DekningsType.FULL;
-        };
-    }
-
-    private static Adresser tilAdresser(List<AdresseDto> adresser, Adressebeskyttelse adressebeskyttelse) {
-        return new Adresser(tilAdresser(adresser), tilAdressebeskyttelse(adressebeskyttelse));
-    }
-
-    private static List<Adresse> tilAdresser(List<AdresseDto> adresser) {
-        return adresser.stream()
-                .map(PersonMapper::tilAdresse)
-                .toList();
-    }
-
-    private static Adresse tilAdresse(AdresseDto adresseDto) {
-        return new Adresse(
-                tilAdresseType(adresseDto.adresseType()),
-                adresseDto.matrikkelId(),
-                adresseDto.land(),
-                adresseDto.fom(),
-                adresseDto.tom()
-        );
-    }
-
-    private static Adresse.AdresseType tilAdresseType(AdresseDto.AdresseType adresseType) {
-        return switch (adresseType) {
-            case BOSTEDSADRESSE -> Adresse.AdresseType.BOSTEDSADRESSE;
-            case POSTADRESSE -> Adresse.AdresseType.POSTADRESSE;
-        };
-    }
-
-    private static no.nav.vtp.person.personopplysninger.Adressebeskyttelse tilAdressebeskyttelse(
-            Adressebeskyttelse beskyttelse) {
-        if (beskyttelse == null) {
-            return null;
-        }
-        return switch (beskyttelse) {
-            case STRENGT_FORTROLIG -> no.nav.vtp.person.personopplysninger.Adressebeskyttelse.STRENGT_FORTROLIG;
-            case FORTROLIG -> no.nav.vtp.person.personopplysninger.Adressebeskyttelse.FORTROLIG;
-            case UGRADERT -> no.nav.vtp.person.personopplysninger.Adressebeskyttelse.UGRADERT;
-        };
-    }
-
-    private static Arbeidsforholdstype tilArbeidsforholdstype(no.nav.foreldrepenger.vtp.kontrakter.person.Arbeidsforholdstype type) {
-        if (type == null) {
-            return null;
-        }
-        return switch (type) {
-            case ORDINÆRT_ARBEIDSFORHOLD -> Arbeidsforholdstype.ORDINÆRT_ARBEIDSFORHOLD;
-            case MARITIMT_ARBEIDSFORHOLD -> Arbeidsforholdstype.MARITIMT_ARBEIDSFORHOLD;
-            case FRILANSER_OPPDRAGSTAKER_MED_MER -> Arbeidsforholdstype.FRILANSER_OPPDRAGSTAKER_MED_MER;
-            case FORENKLET_OPPGJØRSORDNING -> Arbeidsforholdstype.FORENKLET_OPPGJØRSORDNING;
-        };
-    }
-
-    private static List<Arbeidsavtale> tilArbeidsavtaler(List<ArbeidsavtaleDto> dtos) {
-        if (dtos == null) {
-            return Collections.emptyList();
-        }
-        return dtos.stream()
-                .map(PersonMapper::tilArbeidsavtale)
-                .collect(Collectors.toList());
-    }
-
-    private static Arbeidsavtale tilArbeidsavtale(ArbeidsavtaleDto dto) {
-        return new Arbeidsavtale(
-                dto.avtaltArbeidstimerPerUke(),
-                dto.stillingsprosent(),
-                dto.beregnetAntallTimerPerUke(),
-                dto.sisteLønnsendringsdato(),
-                dto.fomGyldighetsperiode(),
-                dto.tomGyldighetsperiode()
-        );
-    }
-
-    private static List<Permisjon> tilPermisjoner(List<PermisjonDto> dtos) {
-        if (dtos == null) {
-            return Collections.emptyList();
-        }
-        return dtos.stream()
-                .map(PersonMapper::tilPermisjon)
-                .collect(Collectors.toList());
-    }
-
-    private static Permisjon tilPermisjon(PermisjonDto dto) {
-        return new Permisjon(
-                dto.fomGyldighetsperiode(),
-                dto.tomGyldighetsperiode(),
-                dto.stillingsprosent(),
-                tilPermisjonstype(dto.permisjonstype())
-        );
-    }
-
-    private static Permisjon.Permisjonstype tilPermisjonstype(Permisjonstype type) {
-        if (type == null) {
-            return null;
-        }
-        return switch (type) {
-            case PERMISJON -> Permisjon.Permisjonstype.PERMISJON;
-            case PERMISJON_MED_FORELDREPENGER -> Permisjon.Permisjonstype.PERMISJON_MED_FORELDREPENGER;
-            case PERMISJON_VED_MILITÆRTJENESTE -> Permisjon.Permisjonstype.PERMISJON_VED_MILITÆRTJENESTE;
-            case PERMITTERING -> Permisjon.Permisjonstype.PERMITTERING;
-            case UTDANNINGSPERMISJON -> Permisjon.Permisjonstype.UTDANNINGSPERMISJON;
-            case UTDANNINGSPERMISJON_IKKE_LOVFESTET -> Permisjon.Permisjonstype.UTDANNINGSPERMISJON_IKKE_LOVFESTET;
-            case UTDANNINGSPERMISJON_LOVFESTET -> Permisjon.Permisjonstype.UTDANNINGSPERMISJON_LOVFESTET;
-            case VELFERDSPERMISJON -> Permisjon.Permisjonstype.VELFERDSPERMISJON;
-            case ANNEN_PERMISJON_IKKE_LOVFESTET -> Permisjon.Permisjonstype.ANNEN_PERMISJON_IKKE_LOVFESTET;
-            case ANNEN_PERMISJON_LOVFESTET -> Permisjon.Permisjonstype.ANNEN_PERMISJON_LOVFESTET;
-        };
-    }
-
-    private static Inntektsperiode.YtelseType tilYtelseType(InntektYtelseType type) {
-        if (type == null) {
-            return null;
-        }
-        // Map from DTO enum to domain enum - they should have matching values
-        return Inntektsperiode.YtelseType.valueOf(type.name());
-    }
-
-    private static Inntektsperiode.FordelType tilInntektFordel(InntektsperiodeDto.InntektFordelDto fordel) {
-        if (fordel == null) {
-            return null;
-        }
-        return switch (fordel) {
-            case KONTANTYTELSE -> Inntektsperiode.FordelType.KONTANTYTELSE;
-            case UTGIFTSGODTGJØRELSE -> Inntektsperiode.FordelType.UTGIFTSGODTGJØRELSE;
-            case NATURALYTELSE -> Inntektsperiode.FordelType.NATURALYTELSE;
-        };
+    private static List<Skatteopplysning> tilSkatteopplysninger(List<SkatteopplysningDto> dtos) {
+        if (dtos == null) return List.of();
+        return dtos.stream().map(dto -> new Skatteopplysning(dto.år(), dto.beløp())).toList();
     }
 }
